Fix tooltip cut off with horizontal scrolling table

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -79,8 +79,10 @@ button:focus, a:focus, input:focus {
 }
 
 .fix-table-height {
-    height: 360px;
+    height: 420px;
     overflow-y: auto;
+    padding-top: 4rem;
+    margin-top: -4rem;
 }
 
 ul {
